# gradelib

./: .buildinfo  .envrc  .gitignore  .pre-commit-config.yaml  AGENTS.md  Demo.ipynb  LICENSE  README.md  api.html  flake.nix  genindex.html  gradelib.py  index.html  objects.inv  py-modindex.html  pyproject.toml  quickstart.html  requirements.txt  search.html  searchindex.js  setup.py  shell.nix
.direnv/: .gitignore
.github/workflows/: docs.yaml  pages.yaml  test.yaml
_sources/: api.rst.txt  index.rst.txt
_sources/api/: core-assignments.rst.txt  core-gradebook.rst.txt  core.rst.txt  index.rst.txt  io.rst.txt  policies-attempts.rst.txt  policies-drops.rst.txt  policies-exceptions.rst.txt  scales.rst.txt  statistics.rst.txt
_sources/tutorial/: extra_credit.rst.txt  index.rst.txt  loading.rst.txt  policies.rst.txt  reviewing.rst.txt  scales.rst.txt
_static/: pygments.css
api/: core-amounts.html  core-assignments.html  core-gradebook.html  core-groups.html  core-students.html  core.html  index.html  io.html  overview.html  plot.html  policies-attempts.html  policies-drops.html  policies-exceptions.html  policies-lates.html  policies.html  preprocessing.html  reports.html  scales.html  statistics.html
demo/: Demo.ipynb  canvas.csv  gradescope.csv  main.tex
doc/: api.bak  api.rst  conf.py  index.rst  quickstart.rst
doc/api/: core-amounts.rst  core-groups.rst  core-students.rst  core.rst  io.rst  overview.rst  plot.rst  policies-attempts.rst  policies-drops.rst  policies-exceptions.rst  policies-lates.rst  policies.rst  preprocessing.rst  reports.rst  scales.rst  statistics.rst
doc/tutorial/: gradebooks.rst  groups.rst  index.rst  policies.rst  preprocessing.rst  scales.rst
gradelib/: __init__.py  _common.py  _examples.py  _util.py  core.py  gradebook.py  io.py  jupyter.py  overview.py  pipeline.py  plot.py  policies.py  predicates.py  preprocessing.py  reports.py  scales.py  statistics.py  steps.py  summarize.py  types.py
gradelib/core/: __init__.py  _amounts.py  _assignments.py  _gradebook.py  _student.py  amounts.py  assignments.py  gradebook.py  student.py
gradelib/grading/: __init__.py  lates.py  redeem.py
gradelib/io/: __init__.py  canvas.py  gradescope.py  scales.py
gradelib/policies/: __init__.py  _common.py  attempts.py  (+6 more)
tests/: conftest.py  policies.py  test_assignments.py  test_core.py  test_gradebook.py  test_io.py  test_io_canvas.py  test_io_gradescope.py  test_io_ucsd.py  test_policies.py  test_predicates.py  test_preprocessing.py  test_read.py  test_scales.py  test_statistics.py  test_steps.py  test_summarize.py  util.py
tutorial/: extra_credit.html  gradebooks.html  groups.html  index.html  loading.html  policies.html  preprocessing.html  reviewing.html  scales.html
(+44 files in other folders)
