[tool.poetry]
name = "gradelib"
version = "0.2.0"
description = "Streamline end-of-quarter grading."
authors = ["Justin Eldridge <eldridgejm@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2"
matplotlib = "^3.3"
numpy = "^1.20"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
mypy = "^0.920"
ipython = "^7.30.1"
pytest = "^6.2.5"
Sphinx = "^4.3.1"
sphinx-rtd-theme = "^1.0.0"

[tool.mypy]

[[tool.mypy.overrides]]
module = "matplotlib.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pandas"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
